fixing alignment with css

--- a/django/django_orm/LoginAndRegPROJ/apps/LoginAndRegAPP/static/LoginAndRegAPP/css/style.css
+++ b/django/django_orm/LoginAndRegPROJ/apps/LoginAndRegAPP/static/LoginAndRegAPP/css/style.css
@@ -90,3 +90,9 @@ h1 {
 .messagesclass {
     padding-left: 20px;
 }
+.labels {
+    width: 100px;
+}
+#datebox {
+    width: 195px;
+}
